--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@pinia/nuxt": "^0.9.0",
     "nuxt": "^3.15.3",
     "pinia": "^2.3.1",
+    "usebootstrap": "^3.5.100",
     "vue": "latest",
     "vue-router": "latest"
   }
