--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nuxt": "^3.15.3",
     "pinia": "^2.3.1",
     "usebootstrap": "^3.5.100",
+    "v-gsap-nuxt": "^1.3.4",
     "vue": "latest",
     "vue-router": "latest"
   }
